--- a/Privacy_Policy_webdav.html
+++ b/Privacy_Policy_webdav.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <meta name="viewport" content="width=device-width"> <title>Privacy Policy</title> <style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em;}</style></head> <body><h2>Privacy Policy</h2> <p> The Olive Tree Software built the FTP Server app as an Ad Supported app. This SERVICE is provided by The Olive Tree Sofware at no cost and is intended for use as is.
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <meta name="viewport" content="width=device-width"> <title>Privacy Policy</title> <style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em;}</style></head> <body><h2>Privacy Policy</h2> <p> The Olive Tree Software built the WebDAV Server app as an Ad Supported app. This SERVICE is provided by The Olive Tree Sofware at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding our policies with the collection, use, and
                     disclosure of Personal Information if anyone decided to use our Service.
                   </p> <p>If you choose to use our Service, then you agree to the collection and use of information in relation
@@ -7,7 +7,7 @@
                     Service. We will not use or share your information with anyone except as described
                     in this Privacy Policy.
                   </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
-                    at FTP Server unless otherwise defined in this Privacy Policy.
+                    at WebDAV Server unless otherwise defined in this Privacy Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, we may require you to provide us with certain
                     personally identifiable information, including but not limited to Android Advertising ID. The information that we request will be retained by us and used as described in this privacy policy.
                   </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li> <!----> <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a></li> <!----> </ul></div> <p><strong>Cookies</strong></p> <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These
